--- a/components/AddProperty/addProperty.module.scss
+++ b/components/AddProperty/addProperty.module.scss
@@ -1,19 +1,11 @@
 .container {
     background-color: var(--color-white);
-    padding: calc(var(--nav-bar-height)) var(--container-padding) 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+    margin-top: var(--nav-bar-height);
+    padding: 8rem var(--container-padding);
+    
     .wrapper {
-        max-width: 1536px;
-        padding: 8rem 0;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .container {
-        padding-top: var(--nav-bar-height-mobile);
+        margin: 0 auto;
+        max-width: 768px;
     }
 }
 
